--- a/artikel-terkait.html
+++ b/artikel-terkait.html
@@ -19,46 +19,40 @@ a {
   text-decoration:none;
 }
 a:hover {color:#0379C4}
+
 .related-post {
-margin:20px 0 0 -25px;
-padding: 0;
-overflow:hidden;
-}
-.related-post {
-margin: 30px auto 0;
-overflow: hidden;
+	overflow:hidden;
+	margin:0 0 30px;
 }
 .related-post h4 {
-position:relative;
-margin: 0;
-display: inline-block;
-font-weight: 500;
-color: #afafaf;
-text-transform: uppercase;
-font-size: 16px;
-z-index: 1;
-background: #fff;
-padding: 0 10px;
+	display: none;
 }
+	
 .related-post ul {
-padding: 0 !important;
-font-size: 14px;
+        position:relative;
+	overflow:hidden;
+	margin:0 -10px;
+	padding:0;
 }
+	
 /* Style 3 */
 .related-post-style-3,
 .related-post-style-3 li {
-margin: 0;
-padding: 0;
-list-style: none;
-word-wrap: break-word;
-overflow: hidden;
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	word-wrap: break-word;
+	overflow: hidden;
 }
 .related-post-style-3 .related-post-item {
-float: left;
-width: 23.5%;
-height: auto;
-margin-right: 2%;
-margin-bottom: 10px;
+	width: 33.33333333%;
+	position: relative;
+	overflow: hidden;
+	float: left;
+	display: block;
+	box-sizing: border-box;
+	padding:0 10px;
+	margin:0;
 }
 .related-post-style-3 .related-post-item:nth-of-type(4n+0) {
 margin-right: 0;
@@ -67,12 +61,12 @@ margin-right: 0;
 opacity: 0.7;
 }
 .related-post-style-3 .related-post-item-thumbnail {
-display: block;
-max-height: none;
-background-color: transparent;
-border: none;
-padding: 0;
-max-width: 100%;
+	width: 100%;
+	height: 130px;
+	position: relative;
+	overflow: hidden;
+	display: block;
+	border-radius: 4px;
 }
 .related-post-style-3 .related-post-item-title {
 color: #444;
