--- a/artikel-terkait.html
+++ b/artikel-terkait.html
@@ -18,7 +18,10 @@ a {
   color:#212121;
   text-decoration:none;
 }
-a:hover {color:#0379C4}
+
+a:hover {
+	color:#0379C4;
+}
 
 .related-post {
 	overflow:hidden;
@@ -62,32 +65,32 @@ opacity: 0.7;
 }
 .related-post-style-3 .related-post-item-thumbnail {
 	width: 100%;
-	height: 130px;
+	height: 150px;
 	position: relative;
 	overflow: hidden;
 	display: block;
 	border-radius: 4px;
 }
 .related-post-style-3 .related-post-item-title {
-color: #444;
+	color: #444;
 }
 .related-post-style-3 .related-post-item-tooltip {
-padding: 10px 0;
+	padding: 10px 0;
 }
 .related-post-item-tooltip .related-post-item-title {
-font-weight: 500;
-display: block;
+	font-weight: 500;
+	display: block;
 }
 @media only screen and (max-width:480px){
 .related-post-style-3 .related-post-item {
-width: 48%;
-margin-right: 4%;
+	width: 48%;
+	margin-right: 4%;
 }
 .related-post-style-3 .related-post-item:nth-of-type(2n+0) {
-margin-right: 0;
+	margin-right: 0;
 }
 .related-post-style-3 .related-post-item:nth-of-type(2n+1) {
-clear: both;
+	clear: both;
 }
 }
 </style>
