--- a/artikel-terkait.html
+++ b/artikel-terkait.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <meta charset="utf-8">
@@ -18,80 +18,80 @@ a {
   color:#212121;
   text-decoration:none;
 }
-
-a:hover {
-	color:#0379C4;
-}
-
+a:hover {color:#0379C4}
 .related-post {
-	overflow:hidden;
-	margin:0 0 30px;
+margin:20px 0 0 -25px;
+padding: 0;
+overflow:hidden;
 }
 .related-post h4 {
-	display: none;
+display: none;
 }
-	
-.related-post ul {
-        position:relative;
-	overflow:hidden;
-	margin:0 -10px;
-	padding:0;
-}
-	
 /* Style 3 */
-.related-post-style-3,
-.related-post-style-3 li {
-	margin: 0;
-	padding: 0;
-	list-style: none;
-	word-wrap: break-word;
-	overflow: hidden;
+ul.related-post-style-3{
+list-style:none;
+margin:0;
+padding-left:16px;
+width:100%;
+-moz-box-sizing:border-box;
+-webkit-box-sizing:border-box;
+box-sizing:border-box;
+}
+.related-post-style-3 li a{
+color: #212121;
+font-weight:400 !important;
+line-height:1.4em;
+}
+.related-post-style-3 li a:hover{
+color: #0379C4;
 }
 .related-post-style-3 .related-post-item {
-	width: 33.33333333%;
-	position: relative;
-	overflow: hidden;
-	float: left;
-	display: block;
-	box-sizing: border-box;
-	padding:0 10px;
-	margin:0;
+display:block;
+float:left;
+width:22.2%;
+height:auto;
+padding:0 10px;
+border-left:1px solid #eee;
+margin-bottom:-989px;
+padding-bottom:999px;
+list-style:none;
+word-wrap:break-word;
 }
-.related-post-style-3 .related-post-item:nth-of-type(4n+0) {
-margin-right: 0;
-}
-.related-post-style-3 .related-post-item:hover {
-opacity: 0.7;
-}
+.related-post-style-3 .related-post-item:first-child {border-left:none}
+.related-post-style-3 .related-post-item:last-child {padding-right:0}
 .related-post-style-3 .related-post-item-thumbnail {
-	width: 100%;
-	height: 150px;
-	position: relative;
-	overflow: hidden;
-	display: block;
-	border-radius: 4px;
+display:block;
+margin:0 0 10px;
+width:100%;
+height:auto;
+max-width:none;
+background-color:transparent;
+border:none;
+padding:0;
 }
-.related-post-style-3 .related-post-item-title {
-	color: #444;
+.related-post-style-3 .related-post-item-title {font-weight:bold}
+@media screen and (max-width:650px){
+.related-post-style-3 .related-post-item
+{width:22%}
+padding-bottom:20px;
 }
-.related-post-style-3 .related-post-item-tooltip {
-	padding: 10px 0;
+@media screen and (max-width:610px){
+.related-post-style-3 .related-post-item
+{width:21%}
+padding-bottom:20px;
 }
-.related-post-item-tooltip .related-post-item-title {
-	font-weight: 500;
-	display: block;
+@media screen and (max-width:420px){
+.related-post-style-3 .related-post-item
+{width:43%}
+padding-bottom:50px;
 }
-@media only screen and (max-width:480px){
-.related-post-style-3 .related-post-item {
-	width: 48%;
-	margin-right: 4%;
-}
-.related-post-style-3 .related-post-item:nth-of-type(2n+0) {
-	margin-right: 0;
-}
-.related-post-style-3 .related-post-item:nth-of-type(2n+1) {
-	clear: both;
-}
+@media screen and (max-width:420px){
+.related-post-style-3 .related-post-item
+{width:95%;height:auto;position: relative;border-bottom: 1px solid #e1e1e1}
+.related-post-style-3 .related-post-item-thumbnail{
+width: 30%}
+.related-post-style-3 .related-post-item-tooltip{
+margin-left: 32%;position: absolute;top: 10px;}
 }
 </style>
 </head>
