--- a/artikel-terkait.html
+++ b/artikel-terkait.html
@@ -20,7 +20,7 @@ a {
 }
 a:hover {color:#0379C4}
 .related-post {
-margin:20px 0 0 -25px;
+margin:0 10px;
 padding: 0;
 overflow:hidden;
 }
@@ -38,12 +38,12 @@ width:100%;
 box-sizing:border-box;
 }
 .related-post-style-3 li a{
-color: #212121;
+color: #656565;
 font-weight:400 !important;
 line-height:1.4em;
 }
 .related-post-style-3 li a:hover{
-color: #0379C4;
+color: #f2b125;
 }
 .related-post-style-3 .related-post-item {
 display:block;
