--- a/artikel-terkait.html
+++ b/artikel-terkait.html
@@ -10,22 +10,22 @@ body {
   background-color:white;
   margin:0;
   padding:0;
-  color:#212121;
+  color:#656565;
   font-family: Roboto, Arial, sans-serif;
   font-size:15px;
 }
 a {
-  color:#212121;
+  color:#656565;
   text-decoration:none;
 }
-a:hover {color:#0379C4}
+a:hover {color:#f2b125}
 .related-post {
-margin:0 0 0 -25px;
+margin:10px 0 0 -25px;
 padding: 0;
 overflow:hidden;
 }
 .related-post h4 {
-display: none;
+display:none;
 }
 /* Style 3 */
 ul.related-post-style-3{
